# esp32-oberon-compiler

./: .gitignore  CMakeLists.txt  Esp32.Mod  LICENSE.txt  Makefile  OIOrderESP32  ORB.Mod  ORG.Mod  ORP.Mod  ORS.Mod  ORTool  ORTool.Mod  ORToolESP32  Oberon  Oberon.Mod  OberonESP32  README.md  Reals.c  Reals.sym  Test.Mod  Texts.Mod
CMake/: CMakeDetermineOBNCCompiler.cmake  CMakeOBNCCompiler.cmake.in  CMakeOBNCInformation.cmake  CMakeTestOBNCCompiler.cmake
Template App/: CMakeLists.txt  Makefile  README.md
Template App/main/: app_main.c
Test/: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  tests.txt  toto.txt
Test/init/: init.S
Test/ld/: esp32.ld
Test/main/: .gitignore
Test/src/: .gitignore  Assignments.Mod  Assignments.smb  Byte.Mod  Case.Mod  DefFunc.Mod  Main.Mod  Out.Mod  Out.smb  Pointer.Mod  SimpleMath.Mod  SimpleReal.Mod  Template.Mod  Test.Mod  Test.rsc  Test.smb  Test2.Mod  Test2.smb  Test3.Mod  Test3.smb
Test_Old/: README.md  gdbinit
Test_Old/src/: ArrayAssignments.Mod  Assignments.Mod  BitFunc.Mod  Case.Mod  ShortInt.Mod  SimpleMath.Mod
Trials/: CMakeLists.txt  Makefile  Makefile.old  README.md  Test.Mod  Test.S  Test.smb  gdbinit  test.lst
Trials/CMake/: CMakeDetermineOBERONCompiler.cmake  CMakeOBERONCompiler.cmake.in  CMakeOBERONInformation.cmake  CMakeTestOBERONCompiler.cmake
Trials/components/oberon/: CMakeLists.txt  Makefile  makefile.inc
Trials/components/oberon/src/: Main.Mod  math_support.S
Trials/init/: defs.S  init.S  interrupt_vectors.S  math_support.S  syscall.S  test.S
Trials/ld/: esp32.ld
Trials/main/: .gitignore  CMakeLists.txt  Main.S  Out.S  init.S  toto.S
Trials/src/: Kernel.Mod  Kernel.smb  Main.Mod  Main.S  Main.smb  Out.smb
compiler-test-suite/: BitFunc.Mod  CaseChar0.Mod  CaseNum0.Mod  CaseRecord0.Mod  CaseRecord2.Mod  CaseRecord3.Mod  CommutativeSwap.Mod  DivMul.Mod  ExtTypes.Mod  Fractions.Mod  Makefile  OpenArrays2.Mod  Out.S  Out1.Mod  Out2.Mod  Out5.Mod  Out6.Mod  Pattern2a.Mod  Pattern2c.Mod  ProcVariables5.Mod  ProcVariables7.Mod  Readme.MD  RecordAndTypeExtension.Mod  RecordAssignment2.Mod  SetTest.Mod  Strings.Mod  Strings.smb  Strings0.S  Strings0.smb  Strings1.Mod  Strings1.S  Strings1.smb  Strings2  TestABS.Mod  TestAnonymousName.Mod  TestAssert.Mod  TestAssignmentMix.Mod  TestCPS.Mod  TestCmdLineArgs.Mod  TestCyclicImport00B.Mod  (+22 more)
compiler-test-suite/.obnc/: Out.c  Out.h  Out.sym  Strings.c  Strings2.c  TestFunction0.c
compiler-test-suite/src/: .gitignore  ArrayAssignment.Mod  ArrayAssignment.S  ArrayAssignment.smb  Arrays2.Mod  Arrays3.Mod  BitFunc.Mod  CaseNum0.Mod  CaseNum1.Mod  CaseRecord0.Mod  CaseRecord1.Mod  CaseRecord2.Mod  CaseRecord3.Mod  CommutativeSwap.Mod  ConstantFoldingAndLoadOp.Mod  DivMul.Mod  EmptyArrayAndRecord.Mod  Fractions.Mod  FragileBaseClass.Mod  MagicSquares.Mod  OpenArrays.Mod  OpenArrays2.Mod  OpenArrays3.Mod  Out.Mod  Out.S  Out.smb  Out0.Mod  Out1.Mod  Out2.Mod  Out3.Mod  Out4.Mod  Out5.Mod  Out6.Mod  Pattern1.Mod  Pattern2a.Mod  Pattern2b.Mod  Pattern2b.S  Pattern2c.Mod  Permutations.Mod  Powers.Mod  (+72 more)
doc/: Changes to  Oberon-07 definition.md  Changes to  Oberon07 definition.md  JTAG-FTDI.asciidoc  JTAG-FTDI.md  My Process.md  Users Guide.md  internals.md  references.md  smb File Format.md  todo.md
lib/: .gitignore  Kernel.Mod  Makefile  Out.Mod  Out.S  Out.smb
lib/init/: .gitignore  init.S  syscall.S
lib/src/: .gitignore  ESP_Error.Mod  ESP_Support.Mod  ESP_System.Mod  ESP_Task_Watchdog.Mod  ESP_Timer.Mod  Esp.Mod  Esp.c  EspDefs.Mod  In.Mod  In.S  Kernel.Mod  Math.Mod  Out.Mod  Qio.Mod  Qio.c  QioDefs.Mod  Strings.Mod  Watchdog.Mod
patterns/: .gitignore  Makefile  Pattern1.Mod  Pattern1.S  Pattern10.Mod  Pattern10.S  Pattern11.Mod  Pattern11.S  Pattern12a.Mod  Pattern12a.S  Pattern12b.Mod  Pattern12b.S  Pattern12c.Mod  Pattern12c.S  Pattern13.Mod  Pattern13.S  Pattern14.Mod  Pattern14.S  Pattern15.Mod  Pattern15.S  Pattern16.Mod  Pattern16.S  Pattern17.Mod  Pattern17.S  Pattern18.Mod  Pattern18.S  Pattern19.Mod  Pattern19.S  Pattern2.Mod  Pattern2.S  Pattern20.Mod  Pattern20.S  Pattern21.Mod  Pattern21.S  Pattern22.Mod  Pattern23.Mod  Pattern24.Mod  Pattern25.Mod  Pattern3.Mod  Pattern3.S  (+13 more)
src/: .gitignore  CMakeLists.txt  Config.Mod  Esp32.Mod  Logger.Mod  OIOrder.Mod  ORB.Mod  ORG.Mod  ORP.Mod  ORS.Mod  ORTool.Mod  Oberon.Mod  Reals.h  SYS.Mod  SYS.c  SYS.h  SYS.sym  Texts.Mod
src/save/: SYS.c  SYS.h
test-baremetal/: .gitignore  Readme.md
test-bearmetal/: .gitignore  Makefile  Readme.md  main.elf  main.elf.map
(+20 files in other folders)
